--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -1,7 +1,13 @@
 public class HelloWorld {
 
     public static void printHello(){
-        System.debug('Production 2 with tag');
+        System.debug('This is from tag commit..UAT');
     }
-
 }
+
+//$ git tag -a v1.4 -m "my version 1.4"
+//git push origin v1.5
+
+//develop
+//uat
+//Production
